[package]
name = "whereami"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
